KinD/cloudKind/test/v0.1/manifestos/gateway-config.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: http-8080
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: All
---
# Toleration para permitir que o Gateway rode no Control-Plane se necessário
